# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose-local.yaml  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: asgi.py  dependencies.py  logging.json  logging.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/exceptions/: already_exists.py  already_in_game.py  game_has_already_started.py  http.py  invalid_api_key.py  invalid_player_amount.py  not_found.py  not_in_game.py  unique_violation.py
app/api/v1/models/: pagination.py
app/api/v1/multi_device_games/: models.py  router.py
app/api/v1/security/: authenticator.py
app/api/v1/single_device_games/: models.py  router.py
app/assets/: parameters.py
app/assets/controllers/: abstract.py  context.py  redis.py  s3.py
app/assets/data/: secret_words.txt  secret_words_controller.py
app/assets/enums/: category.py  payload_type.py  spy_count.py
app/assets/filters/: string.py
app/assets/objects/: abstract.py  base.py  multi_device_active_player.py  multi_device_game.py  multi_device_player.py  player.py  qr_code.py  redis.py  s3.py  secret_words_queue.py  single_device_active_player.py  single_device_game.py  single_device_player.py
app/assets/words/: word_manager.py  words.txt
app/database/: database.py  models.py
app/workers/: crons.py  tasks.py  worker.py
migrations/: env.py
migrations/versions/: 68d5e07b8241_init.py  c1e537b7fd70_add_users_table_index.py
scripts/: generate_secret_words_json.py
(+22 files in other folders)
