[tool.poetry]
name = "backend"
version = "0.1.0"
description = "SpotTheSpy Backend"
authors = ["Plummy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
psycopg = "^3.2.10"
psycopg-binary = "^3.2.10"
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
redis = "^6.4.0"
aiobotocore = "^2.24.2"
pyjwt = "^2.10.1"
argon2-cffi = "^25.1.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
aiohttp = "^3.12.15"
fastapi-sa-orm-filter = "^0.2.4"
pillow = "^11.3.0"
segno = "^1.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
