[tool.poetry]
name = "backend"
version = "1.2.0"
description = "SpotTheSpy Backend"
authors = ["Plummy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
psycopg = "^3.2.10"
psycopg-binary = "^3.2.10"
pydantic = "^2.12.0"
pydantic-settings = "^2.10.1"
redis = "^6.4.0"
aiobotocore = "^2.25.0"
pyjwt = "^2.10.1"
argon2-cffi = "^25.1.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
aiohttp = "^3.13.0"
fastapi-sa-orm-filter = "^0.2.4"
pillow = "^11.3.0"
segno = "^1.6.6"
celery = {extras = ["rabbitmq"], version = "^5.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
